plugins/jojo_core/css/style.css
@icon-font-path: '../external/bootstrap/fonts/';

.hidden {
  display: none;
  visibility: inherit;
}

.clear {
    clear: both;
}

.float-left {
    float:left;
    margin: 3px 10px 5px 0;
}

.float-right {
    float:right;
    margin: 3px 0 5px 10px;
}

img.icon-image {
    vertical-align: -4px;
    margin-right: 3px;
    display: inline;
    background-image: none;
}

.pagination > li.ellip {
    background: none;
    border-left: 1px solid #DDDDDD;
    border-right: 1px solid #DDDDDD;
    color: #DBA070;
    float: left;
    line-height: 1.4;
    margin-left: -1px;
    padding: 6px 12px;
    position: relative;
}

